--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <a href="#">Let's talk</a>
         </div> 
         <div class="image">
-            <img class="container" src="shek.jpeg" alt="shekhar">
+            <img class="container" src="shek1.jpeg" alt="shekhar">
         </div>
         <div class="home_sci">
             <a href="#"><<i class='bx bxl-linkedin-square' ></i></box-icon></a>
